--- a/index.html
+++ b/index.html
@@ -216,16 +216,16 @@
                         </p>
                         <ul class="footer__socials">
                             <li class="footer__social-item">
-                                <a href="" class="gooter__social-link"><img src="images/youtube_icon.svg" alt="" class="footer__social-icon"></a>
+                                <a href="" class="footer__social-link"><img src="images/youtube_icon.svg" alt="" class="footer__social-icon"></a>
                             </li>
                             <li class="footer__social-item">
-                                <a href="" class="gooter__social-link"><img src="images/vk_icon.svg" alt="" class="footer__social-icon"></a>
+                                <a href="" class="footer__social-link"><img src="images/vk_icon.svg" alt="" class="footer__social-icon"></a>
                             </li>
                             <li class="footer__social-item">
-                                <a href="" class="gooter__social-link"><img src="images/facebook-logo.svg" alt="" class="footer__social-icon"></a>
+                                <a href="" class="footer__social-link"><img src="images/facebook-logo.svg" alt="" class="footer__social-icon"></a>
                             </li>
                             <li class="footer__social-item">
-                                <a href="" class="gooter__social-link"><img src="images/instagram.svg" alt="" class="footer__social-icon"></a>
+                                <a href="" class="footer__social-link"><img src="images/instagram.svg" alt="" class="footer__social-icon"></a>
                             </li>
                         </ul>
                     </div>
