--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,11 @@
 </head>
 
 <body class="body">
-    <div class="container">
+    <div class="header__container">
         <header class="header">
 
             <a href="" target="_self" class="header__logo">
-                <img src="./images/logo.svg" alt="" class="header__logo-img">
+                <img src="<%=require('./images/logo.svg')%>" alt="" class="header__logo-img">
             </a>
             <nav class="header__nav">
                 <ul class="header__menu">
@@ -33,8 +33,9 @@
                     </li>
                 </ul>
             </nav>
-
-
+            <div class="header__burger">
+                <span class="header__burger-line"></span>
+            </div>
         </header>
     </div>
     <main class="main">
@@ -43,13 +44,35 @@
                 <h1 class="main-screen__header">
                     Жилой комплекс в историческом центре
                 </h1>
-                <img src="./images/mouse_icon.svg" alt="" class="main-screen__icon">
+                <img src="<%=require('./images/mouse_icon.svg')%>" alt="" class="main-screen__icon">
                 <div class="main-screen__contacts">
                     <p class="main-screen__adress">
                         Наб. реки Фонтанки 10-15
                     </p>
                     <p class="main-screen__phone">
                         8 (812) 123-45-67
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="tests">
+            <div class="tests__container">
+                <div class="tests__item">
+                    <img src="<%=require('./images/bench_icon.svg')%>" alt="" class="tests__img">
+                    <p class="tests__text">Рядом исторические парки и скверы</p>
+                </div>
+                <div class="tests__item">
+                    <img src="<%=require('./images/building_icon.svg')%>" alt="" class="tests__img">
+                    <p class="tests__text">Полностью обустроенный
+                    </p>
+                </div>
+                <div class="tests__item">
+                    <img src="<%=require('./images/fountain_icon.svg')%>" alt="" class="tests__img">
+                    <p class="tests__text">10 фонтанов на территории</p>
+                </div>
+                <div class="tests__item">
+                    <img src="<%=require('./images/bicycle_icon.svg')%>" alt="" class="tests__img">
+                    <p class="tests__text">6 км велодорожек
                     </p>
                 </div>
             </div>
